# django-basic

./: pyproject.toml
books/: models.py  urls.py  views.py
books/migrations/: 0001_initial.py
books/templates/books/: index.html
django_basic/: settings.py  urls.py
